# conserts-demonstrator

./: .gitignore  Cargo.toml  README.md  compile.sh
binpicking/: Cargo.toml  binpicking.yml
binpicking/src/: main.rs
camera/: Cargo.toml  camera.yml
camera/src/: main.rs
robot/: Cargo.toml  robot.yml
robot/src/: main.rs
scanner/: Cargo.toml  scanner.yml
scanner/src/: main.rs
workspace/: Cargo.toml  workspace.yml
workspace/src/: main.rs
