# SPDX-FileCopyrightText: 2021 Fraunhofer Institute for Experimental Software Engineering IESE
#
# SPDX-License-Identifier: MIT

[package]
name = "robot-app"
version = "0.1.0"
edition = "2018"

[dependencies]
consert_robot = { path = "../target/consert_robot"}
crossbeam = { version = "0.7.3", default-features = false }
rand = "0.8.4"
termion = "1.5.6"
uom = "0.31.1"